[gd_scene load_steps=4 format=3 uid="uid://btjv6kteur8ff"]

[ext_resource type="Script" path="res://src/topbar/Navbar.gd" id="1_d0y5t"]
[ext_resource type="Script" path="res://src/topbar/Submenu.gd" id="2_k6ose"]
[ext_resource type="Texture2D" uid="uid://b1y5mj2xeo2iq" path="res://assets/icons/icon-navbar.png" id="3_eajbj"]

[node name="Navbar" type="Panel"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
rotation = -0.000250265
size_flags_horizontal = 3
script = ExtResource("1_d0y5t")

[node name="MenuItems" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="icon" type="MarginContainer" parent="MenuItems"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="iconTexture" type="TextureRect" parent="MenuItems/icon"]
layout_mode = 2
texture = ExtResource("3_eajbj")
expand_mode = 1

[node name="File" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "File"

[node name="Edit" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Edit"

[node name="Select" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Select"

[node name="Modify" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Modify"

[node name="View" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "View"

[node name="Window" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Window
"

[node name="Help" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Help"

[node name="Submenu" type="PopupMenu" parent="."]
position = Vector2i(-9999, -9999)
mouse_passthrough = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
script = ExtResource("2_k6ose")

[connection signal="id_pressed" from="Submenu" to="Submenu" method="_on_id_pressed"]
[connection signal="item_pressed" from="Submenu" to="." method="_on_submenu_item_pressed"]
